# stdash

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: credentials.toml
note/: Untitled.ipynb  stdash.ipynb
src/stdash/: app.py  streamlit.py
src/stdash/pages/: .req_pre.py.swp  app.py  req_D_T.py  req_pre.py
