[project]
name = "stdash"
version = "0.1.0"
description = "streamlit dashboard"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [
    "streamlit>=1.38.0",
    "matplotlib>=3.9.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
